<resources>
    <string name="app_name">Musea</string>
    <string name="title_home">Main Menu</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Chats</string>
    <string name="title_user">User</string>
    <string name="title_maps">Map</string>
    <string name="tab_propers">Close to You</string>
    <string name="tab_pais">Country</string>
    <string name="tab_favorits">Favourites</string>
    <string name="titol_exhibitions"><u>Exhibitions</u></string>
    <string name="perm_denegado">Permission denied, some functionalities will be limited </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_username">Username</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="enter_password_twice">Repeat password</string>
    <string name="checkbox_remember_password">Remember me</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign up</string>
    <string name="signup_suggestion">Not logged in? Sign up</string>
    <string name="welcome_message">WELCOME TO MUSEA</string>
    <string name="recent_text">Recent</string>
    <string name="warning_used_username">This username is already being used!</string>
    <string name="warning_short_username">The username must have at least 6 characters and a maximum of 22 characters</string>
    <string name="warning_short_username_edit">The username must have at least 6 characters</string>
    <string name="warning_short_bio">The bio must have at least 10 characters </string>
    <string name="warning_used_email">This email is already being used!</string>
    <string name="warning_user_exists">This user already exists!</string>
    <string name="warning_not_email">The email address must be a correct address</string>
    <string name="warning_password">Password must contain minimum 8 characters, at least 1 Upercase, 1 Lowercase and 1 Number</string>
    <string name="warning_not_match_password">Passwords do not match!</string>
    <string name="warning_login">Wrong email or password</string>
    <string name="warning_attempts_exceeded">You have exceeded the number of attempts allowed!</string>
    <string name="remaining_time">seconds left</string>
    <string name="warning_login2">Please enter valid username and password</string>
    <string name="button_eu">Edit Profile</string>
    <string name="vis_mus">Visited</string>
    <string name="auto_login_key" />
    <string name="auto_signin_key" />
    <string name="user_pref">Favourites</string>
    <string name="mus_vis">Visited</string>
    <string name="quiz_usu">Quizzes</string>
    <string name="most_visited">Favourite Works</string>
    <string name="change_photo">Change Profile Picture</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="change_val">Save Changes</string>
    <string name="title_covid">Current Information</string>
    <string name="horari_dialog_covid">Schedule</string>
    <string name="ocupation_text_covid_dialog">Ocupation</string>
    <string name="restriccions_text_dialog_covid">Restrictions</string>
    <string name="points">Points:</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="end_message_gold">¡Master of culture!</string>
    <string name="end_message_silver">Undisputed genius</string>
    <string name="end_message_bronze">First time in culture</string>
    <string name="end_message_garbage">Enough for christmas dinners</string>
    <string name="go_back">go back</string>
    <string name="start">Start</string>
    <string name="quizzed_name">Quizzed!</string>
    <string name="title_shop">MUSEA shop</string>
    <string name="available_points">Available points:</string>
    <string name="premium_date">Premium date:</string>
    <string name="title_visited">Visited Museums</string>
    <string name="search_museum">Search museum</string>
    <string name="language_dialog_title">Choose Language</string>
    <string name="your_comment_here">Your comment here…</string>
    <string name="comments_title">Comments</string>
    <string name="delete_dialog">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="favourites">Favourites</string>
    <string name="search_map">Search...</string>
    <string name="geocode_error">Could not find, try a different spelling or be more specific</string>
    <string name="title_activity_help">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="help_and_privacity">Help and Privacy Policy</string>
    <string name="button_premium">Become premium</string>
    <string name="help_general">General</string>
</resources>