<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_action_search"
        android:title="@string/title_dashboard" />
    <item
        android:title="Mapa"
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_action_map"
        />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_chats"
        android:title="@string/title_notifications" />
    <item android:id="@+id/navigation_user"
        android:title="@string/title_user"
        android:icon="@drawable/ic_action_user"

        />

</menu>