<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/backgrond_rectangle"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="?android:windowBackground"
        android:background="@drawable/rounded_corner" />

    <TextView
        android:id="@+id/title_dialog_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/backgrond_rectangle"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:gravity="center_vertical"
        android:text="@string/title_shop"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="?android:textColorPrimary"/>

    <LinearLayout
        android:id="@id/points_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_dialog_shop"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/points_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/available_points"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/points_counter_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout android:id="@+id/panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/points_counter"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/image_holder_shop"
            android:layout_width="336dp"
            android:layout_height="100dp"
            android:src="@drawable/musea_plus1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/image_holder_shop2"
            android:layout_width="336dp"
            android:layout_height="100dp"
            android:src="@drawable/musea_plus2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/image_holder_shop"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/image_holder_shop3"
            android:layout_width="336dp"
            android:layout_height="100dp"
            android:src="@drawable/musea_plus3"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/image_holder_shop2"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@id/points_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_below="@id/image_holder_shop3"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp">
            <TextView
                android:id="@+id/premium_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/premium_date"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/premium_date_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>



    </RelativeLayout>



</RelativeLayout>